# Epos4-on-zephyr

./: README.md  example.ino
Examples/epos_basic/: CMakeLists.txt  stm32f4_disco.overlay
Examples/epos_basic/src/: main.cpp
Examples/epos_matlab/: CMakeLists.txt  ReadmeNiko.txt  prj.conf
Examples/epos_matlab/src/: main.cpp
Examples/epos_matlab/src/simulinkcode/Matlab/_sharedutils/: builtin_typeid_types.h  checksummap.mat  multiword_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwshared.rsp  rtwtypes.h  rtwtypeschksum.mat  shared_file.dmr  tflSUInfo.mat
Examples/epos_matlab/src/simulinkcode/Matlab/_sharedutils/html/: builtin_typeid_types_h.html  multiword_types_h.html  rtGetInf_c.html  rtGetInf_h.html  rtGetNaN_c.html  rtGetNaN_h.html  rt_nonfinite_c.html  rt_nonfinite_h.html  rtwtypes_h.html
Examples/epos_matlab/src/simulinkcode/controller/: Control_System.c  Control_System.h  Control_System_private.h  Control_System_types.h  rtmodel.h
Examples/epos_matlab/src/simulinkcode/controller/referenced_model_includes/: PositionControl.c  PositionControl.h  PositionControl_private.h  PositionControl_types.h  VelocityControl.c  VelocityControl.h  VelocityControl_private.h  VelocityControl_types.h
Examples/epos_parameter_identification/: CMakeLists.txt  Kconfig  ReadmeNiko.txt  prj.conf
Examples/epos_parameter_identification/src/: main.cpp
arduino/: prebuild.sh
arduino/examples/: distrb.csv
arduino/examples/example/: example.ino
arduino/examples/subsystem/: Subsystem.c  Subsystem.h  Subsystem_private.h  Subsystem_types.h  test_code_gen.ino
arduino/src/epos4/: epos4.cpp  epos4.h
plotter/: plotter.py  pythonploter2.py
src/epos4/: epos4.cpp  epos4.h
zephyr/epos_controller/: CMakeLists.txt  prj.conf
zephyr/epos_controller/src/: main.cpp  pos_controller.cpp  test.cpp
zephyr/epos_controller/src/epos4/: epos4.cpp  epos4.h
zephyr/epos_controller/src/simulinkcode/Parameteridentification_example_lb/Atomic_grt_rtw/: Atomic.c  Atomic.h  Atomic_data.c  Atomic_private.h  Atomic_types.h  buildInfo.mat  defines.txt  multiword_types.h  rtmodel.h  rtwtypes.h
zephyr/epos_controller/src/simulinkcode/R2021a/rtw/c/src/: rt_logging.h
zephyr/epos_controller_mcp2515/: CMakeLists.txt  prj.conf  stm32f4_disco.overlay
zephyr/epos_controller_mcp2515/src/: main.cpp  test.cpp
zephyr/epos_controller_mcp2515/src/epos4/: epos4.cpp
zephyr/epos_controller_model/: CMakeLists.txt  prj.conf  stm32f4_disco.overlay
zephyr/epos_controller_model/src/: main.c  test.cpp
zephyr/epos_controller_model/src/R2021a/rtw/c/src/common/: rt_main.c
zephyr/epos_controller_model/src/codegeneration/assdf_grt_rtw/: assdf.c  assdf.h  assdf_data.c  assdf_private.h  assdf_types.h  buildInfo.mat  defines.txt  multiword_types.h  rtmodel.h  rtwtypes.h
zephyr/epos_controller_model/src/epos4/: epos4.h
